--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -9,13 +9,15 @@ html, body {
 	height: 100%;
 	width: 100%;
 	color: #222;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 
-h3 {
-	padding-top: 8%;
-	font-family: 'Montserrat', sans-serif;
-
+.navbar-brand h1{
+  padding-top: 10%;
+  font-size: 30px;
+  font-family: Garamond;
 }
 
 
@@ -33,6 +35,11 @@ footer {
 	padding-top: 2em;
 	text-align: center;
 	/*height: 200px;*/
+  width: 100%;
+}
+
+footer p {
+  text-align: center;
 }
 
 p {
@@ -91,13 +98,6 @@ hr.light {
 }
 
 
-.blockquote p {
-	text-align: center;
-	margin-left: 50px;
-	padding-left: 10px;
-	margin-top: 100px;
-}
-
 
 
 #sidebar-button {
@@ -123,19 +123,30 @@ hr.light {
 	margin-bottom: 2em;
 }
 
-.sidebar {
-	padding: 40px;
 
+
+#card-img {
+  width: 100%;
+  height: 200px;
 }
 
-#sidebar-image {
-	width: 90%;
-	min-height: 600px;
-	margin-top: 100px;
-	margin-left: 30px;
-	border-radius: 80px;
+.card {
+  margin: 40px 30px 0px 0px;
+  margin-bottom: 50px;
+  overflow: hidden;
 }
 
+.blockquote-footer {
+  width: 100%;
+  background-color: #fff;
+}
+
+#blockquote-text {
+  /*text-align: justify;*/
+  text-decoration: none;
+  overflow: hidden;
+
+}
 /*---------------------------------------hover effect --------------------------------*/
 
 .hovereffect {
@@ -179,6 +190,7 @@ hr.light {
   text-transform: uppercase;
   color: #fff;
   margin-top: 0px;
+  margin-right: 30px;
   text-align: center;
   position: relative;
   font-size: 17px;
@@ -232,15 +244,64 @@ hr.light {
   transition-delay: 0.3s;
 }
 
-
-
 /*---Media Queries --*/
-@media (max-width: 992px) {
 
-  }
+
+ @media (max-width: 415px) { 
+    .navbar-brand {
+    display: none;
+    }
+
+     #about-image, #avatar {
+    width: 100%;
+    height: 80%;
+    border-radius: 20px;
+    padding: 20px;
+    }
+
+    .card {
+      margin: 0 0 30px 0;
+
+    }
+
+    .display-4 {
+      font-size: 30px;
+    }
+
+    .lead {
+      font-size: 15px;
+    }
+
+    .hovereffect h2{
+      margin: 0;
+    }
+
+ }
+
+  
+/*// Medium devices (tablets, 768px and up)*/
 @media (max-width: 768px) {
-  
-}
-@media (max-width: 576px) {
-  
+   #about-image, #avatar {
+    width: 100%;
+    height: 80%;
+    border-radius: 20px;
+    padding: 20px;
+    }
+
+    .display-4 {
+      font-size: 30px;
+    }
+
+    .lead {
+      font-size: 15px;
+    }
+
+ }
+
+@media (min-width: 768px {
+
+
+
+
+
 }
